k8s/apps/mirakurun/resources/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route

spec:
  routes:
    - kind: Rule
      match: Host(`mirakurun.starry.blue`)
      services:
        - name: app
          port: 40772

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-direct

spec:
  entryPoints:
    - direct
  routes:
    - kind: Rule
      match: Host(`mirakurun-api.starry.blue`) && PathPrefix(`/api`)
      services:
        - name: app
          port: 40772
      middlewares:
        - name: mirakurun-basic-auth

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: mirakurun-basic-auth

spec:
  basicAuth:
    realm: Access Restricted
    removeHeader: true
    secret: basic-auth-credentials
